--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Win32::Process.
 
+0.13  Fri Jun 13 2008
+
+	- Get rid of the "require Win32" statement in Makefile.PL.
+
+	- Add ABOVE_NORMAL_PRIORITY_CLASS and BELOW_NORMAL_PRIORITY_CLASS
+	  constants (not exported by default).
+
+	- Use T_BOOL instead of T_IV for BOOL typemap entry so that
+	  the code doesn't warn on undef.
+
 0.12  Tue Apr 15 2008
 
 	- version 0.12 for separate upload to CPAN
