Import of JDB/Win32-Process-0.16 from CPAN.
gitpan-cpan-distribution: Win32-Process
gitpan-cpan-version:      0.16
gitpan-cpan-path:         JDB/Win32-Process-0.16.tar.gz
gitpan-cpan-author:       JDB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Win32::Process.
 
+0.16  Wed Dec 11 2013
+	- Really add Github repo link to META.yml
+
 0.15  Wed Dec 4 2013
         - Add LICENSE section to the POD (RT #41182).
 	- Fix required perl version 5.6 -> 5.006.
